environments/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dhg-rateauto-dev-ingress
  namespace: dhg-rateauto-dev-namespace
  annotations:
    networking.gke.io/managed-certificates: "dhg-rateauto-dev-cert"
    kubernetes.io/ingress.global-static-ip-name: "dhg-rateauto-dev-static-ip"
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/v1beta1.FrontendConfig: "dhg-rateauto-dev-frontend-config"
spec:
  ingressClassName: gce
  rules:
    - host: gcpcloudhub.shop
      http:
        paths:
 
          # ------------------------------------------------------------
          # Vaccine Fee — New UI (dhg-vaccinefee-ui)
          # Routes: gcpcloudhub.shop/vaccinefee-ui
          # ------------------------------------------------------------
          - path: /vaccinefee-ui
            pathType: Prefix
            backend:
              service:
                name: dhg-vaccinefee-ui-service
                port:
                  number: 80
